fix: hero font on smaller screens

--- a/frikndau-preview/assets/css/overrides.css
+++ b/frikndau-preview/assets/css/overrides.css
@@ -100,6 +100,14 @@ h3{
   /* text-stroke: 2px #87edb9; */
 }
 
+@media (max-width: 991px) {
+  #hero h1.hero-big{
+    font-size: 600%;
+    /* -webkit-text-stroke: 2px #87edb9; */
+    /* text-stroke: 2px #87edb9; */
+  }
+}
+
 #hero h1 span {
   color: #FF3C7C;
 }
